--- a/css/style.css
+++ b/css/style.css
@@ -325,9 +325,9 @@ ul {
 
 
 
-.mySwiper2 .swiper-slide {
+/* .mySwiper2 .swiper-slide {
     transition: .3s;
-}
+} */
 
 
 .types-slide {
@@ -375,7 +375,7 @@ ul {
     height: 34.3rem;
     background: linear-gradient(180deg, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.3) 100%);
     border-radius: 8px;
-    transition: .3s;
+    /* transition: .3s; */
     opacity: 0.3;
 }
 
