--- a/css/style.css
+++ b/css/style.css
@@ -197,9 +197,6 @@ ul {
 .phone__player {
     max-width: 77.6rem;
     width: 100%;
-    height: 100%;
-    min-height: 37.7rem;
-    max-height: 37.7rem;
     margin-top: 6rem;
 }
 
@@ -338,6 +335,7 @@ ul {
     position: absolute;
     top: 2rem;
     left: 2rem;
+    font-weight: 700;
 }
 
 .type-level-about {
