update position icon auto

--- a/css/media.css
+++ b/css/media.css
@@ -185,8 +185,8 @@
     }
 
     .autoGraphics {
-        bottom: 5.5rem;
-        right: 0;
+        bottom: 10rem;
+        right: 4rem;
     }
 
     .calory {
