--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ ul {
     font-size: 50px;
     line-height: 60px;
     color: white;
-    max-width: 60rem;
+    max-width: 76rem;
     margin: 0 auto;
     display: flex;
     align-items: center;
@@ -367,7 +367,7 @@ ul {
     border-radius: 8px;
     opacity: 1 !important;
     transform: scale(1.1);
-
+    transition: .3s;
 }
 
 .mySwiper2 .swiper-wrapper {
